--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@
         margin:20px auto 0;
     }
     .head-title {
-        font-size: 26px;
-        line-height: 36px;
+        font-size: 1.6rem;
+        line-height: 1.38;
         margin-bottom: 218px;
     }
     .header-logo {
@@ -60,7 +60,7 @@
 
     .trend-line-link{
         font-size: 16px;
-        line-height: 20px;
+        line-height: 1.25;
     }
 
     .main {
@@ -70,6 +70,7 @@
 
     .main-title {
         font-size: 16px;
+        line-height: 1.25;
     }
 
     .post-container {
@@ -89,13 +90,13 @@
     }
     .post-content-txt{
         font-size: 14px;
-        line-height: 20px;
+        line-height: 1.42;
         margin: 0;
         padding: 0;
     }
     .post-title-link {
         font-size: 16px;
-        line-height: 20px;
+        line-height: 1.25;
     }
     .post-content {
         padding-bottom: 24px;
@@ -106,7 +107,7 @@
     }
     .sidebar-title{
         font-size: 16px;
-        line-height: 30px;
+        line-height: 1.87;
     }
     .shop-block:nth-child(n+2){
         margin-top: 30px;
@@ -142,10 +143,11 @@
     }
     .head-title {
         font-size: 40px;
-        line-height: 55px;
+        line-height: 1.37;
     }
     .main-title {
         font-size: 18px;
+        line-height: 29px;
     }
     .trend-blocks{
         display:flex;
@@ -261,11 +263,12 @@
         margin:125px auto 0;
     }
     .head-title {
-        font-size: 0;
-        line-height: 75px;
+        font-size: 45px;
+        line-height: 1.66;
     }
     .main-title {
         font-size: 20px;
+        line-height: 1.5;
     }
     .trend-block{
         width: 25%;
@@ -275,7 +278,7 @@
     }
     .trend-line-link{
         font-size: 20px;
-        line-height: 24px;
+        line-height: 1.2;
     }
     .post-container {
         flex-direction: row;
@@ -288,11 +291,11 @@
     }
     .post-title-link {
         font-size: 20px;
-        line-height: 24px;
+        line-height: 1.05;
     }
     .post-content-txt{
         font-size: 15px;
-        line-height: 22px;
+        line-height: 1.46;
         margin: 0;
         padding: 0;
     }
@@ -305,7 +308,7 @@
     }
     .sidebar-title{
         font-size: 14px;
-        line-height: 30px;
+        line-height: 2.14;
     }
     .menu-burger {
         display: none;
@@ -315,7 +318,7 @@
     }
     .head-title {
         font-size: 45px;
-        line-height:75px;
+        line-height:1.66;
     }
     .shop-blocks {
         max-width: 1170px;
@@ -385,10 +388,13 @@ body {
     margin: 0;
     padding: 0;
 }
+
+
 h2 {
     margin: 0;
     padding: 0;
 }
+
 p{
     margin: 0;
     padding: 0;
@@ -478,7 +484,6 @@ a{
 .popup-title {
     font-weight: 700;
     color: #000000;
-    line-height: 0;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
@@ -697,7 +702,6 @@ a{
 .main-title {
     font-weight: 700;
     color: #000000;
-    line-height: 0;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
@@ -778,7 +782,6 @@ a{
 
 .trend-line-link{
     color: #ffffff;
-    line-height: 0;
     text-transform: uppercase;
     margin-top: 15px;
     margin-bottom:38px;
@@ -799,6 +802,7 @@ a{
     padding-right: 32px;
     align-items: flex-end;
     position: relative;
+    width: 100%;
 }
 
 /* ----------------------------------------------блок пост */
@@ -928,7 +932,7 @@ a{
 
 .new-post-link {
     color: #000000;
-    line-height: 18px;
+    line-height: 1.28;
     font-size: 14px;
     text-transform: uppercase;
     margin: 0;
@@ -951,7 +955,6 @@ a{
 /* дата новых постов */
 .date-aside {
     margin: 0;
-    line-height: normal;
 }
 
 .sidebar-block:nth-child(n+2){
@@ -1032,7 +1035,7 @@ margin-top: 20px;
 /* --------------------------------------------------------------подписка */
 .flex-container-tag {
     font-size: 12px;
-    line-height: 30px;
+    line-height: 2.5;
     text-transform: uppercase;
 }
 
@@ -1092,7 +1095,7 @@ margin-top: 20px;
 
 .index {
     vertical-align: super;
-    line-height: 18px;
+    line-height: 1.5;
     font-size: 12px;
     text-transform: uppercase;
     color: #b59f5b;
@@ -1146,7 +1149,7 @@ margin-top: 20px;
     margin-bottom: 20px;
     position: relative;
     font-size: 17px;
-    line-height: 22px;
+    line-height: 1.29;
 }
 
     .shop-price-actual{
@@ -1155,7 +1158,7 @@ margin-top: 20px;
         font-weight: 700;
         position: relative;
         font-size: 20px;
-        line-height: 24px;
+        line-height: 1.2;
     }
 
 .shop-txt{
@@ -1182,7 +1185,7 @@ margin-top: 20px;
 .shop-old-price{
     color: black;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     text-transform: uppercase;
     font-weight: 700;
     text-decoration: line-through;
