--- a/css/style.css
+++ b/css/style.css
@@ -12,372 +12,6 @@
     font-style: normal;
 }
 
-@media (max-width: 640px) {
-    .popup-container{
-        max-width:330px;
-    }
-    .x{
-        right:-300px;
-    }
-    .input-popup {
-        max-width: 300px;
-        min-width: 300px;
-    }
-    .head {
-        background-image: url(../images/banner-mobile.jpg);
-    }
-
-    .head-title-container {
-        margin:20px auto 0;
-    }
-    .head-title {
-        font-size: 1.6rem;
-        line-height: 1.38;
-        margin-bottom: 218px;
-    }
-    .header-logo {
-        display: none;
-    }
-    .header-logo-640{
-        max-width: 270px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 180px;
-        display:flex;
-        justify-content: center;
-    }
-
-    .menu-burger {
-        fill: #ffffff;
-    }
-    .menu-list-item {
-        display: none;
-    }
-    .menu-container {
-        max-width: 330px;
-        min-height: 550px;
-    }
-
-    .trend-line-link{
-        font-size: 16px;
-        line-height: 1.25;
-    }
-
-    .main {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .main-title {
-        font-size: 16px;
-        line-height: 1.25;
-    }
-
-    .post-container {
-        max-width: 330px;
-        flex-direction: column;
-        margin: auto;
-    }
-    .post-container:nth-child(n+2) {
-        margin-top: -25px;
-    }
-    .post-tags{
-        padding-top: 14px;
-    }
-    .post-content {
-        border-bottom: 2px solid #eeeeee;
-        flex-grow: 1;
-    }
-    .post-content-txt{
-        font-size: 14px;
-        line-height: 1.42;
-        margin: 0;
-        padding: 0;
-    }
-    .post-title-link {
-        font-size: 16px;
-        line-height: 1.25;
-    }
-    .post-content {
-        padding-bottom: 24px;
-    }
-    .sidebar {
-        max-width: 330px;
-        margin: auto;
-    }
-    .sidebar-title{
-        font-size: 16px;
-        line-height: 1.87;
-    }
-    .shop-block:nth-child(n+2){
-        margin-top: 30px;
-    }
-    .shop-blocks {
-        max-width: 330px;
-    }
-}
-
-@media (min-width: 641px) and (max-width: 1200px) {
-    .popup-container{
-        max-width:388px;
-    }
-    .x{
-        right:-360px;
-    }
-    .input-popup {
-        max-width: 330px;
-        min-width: 330px;
-    }
-    .head {
-        background-image: url(../images/banner-bg-tablet.jpg);
-    }
-    .header-logo-640 {
-        display: none;
-    }
-    .menu-list-item {
-        display: none;
-    }
-    .head-title-container {
-        margin:125px auto 0;
-        line-height: 55px;
-    }
-    .head-title {
-        font-size: 40px;
-        line-height: 1.37;
-    }
-    .main-title {
-        font-size: 18px;
-        line-height: 29px;
-    }
-    .trend-blocks{
-        display:flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .trend-block{
-        width: calc(50% - 2px);
-        margin-top: 4px;
-    }
-    .trend-block:nth-child(even){
-        margin-left: 4px;
-    }
-    .trend-block:nth-child(even){
-        margin-left: 4px;
-    }
-    .trend-line-link{
-        font-size: 17px;
-        line-height: 22px;
-    }
-    .post-container {
-        flex-direction: column;
-    }
-    .container {
-        max-width: 700px;
-    }
-    .post-container {
-        max-width: 380px;
-    }
-    .post-tags{
-        padding-top: 14px;
-    }
-    .post-content {
-        border-bottom: 2px solid #eeeeee;
-    }
-    .post-content-txt{
-        font-size: 15px;
-        line-height: 22px;
-        margin: 0;
-        padding: 0;
-    }
-    .post-container:nth-child(n+2) {
-        margin-top: -25px;
-    }
-    .post-content {
-        padding-bottom: 24px;
-    }
-    .post-title-link {
-        font-size: 17px;
-        line-height: 22px;
-    }
-    .main {
-        display: flex;
-        flex-direction: row;
-    }
-    .sidebar {
-        max-width: 272px;
-        margin-left: 36px;
-    }
-    .sidebar-title{
-        font-size: 18px;
-        line-height: 30px;
-    }
-    .menu-burger {
-        fill: #ffffff;
-    }
-    .menu-container {
-        max-width: 700px;
-    }
-    .head-title {
-        font-size: 40px;
-        line-height: 75px;
-    }
-    .shop-blocks {
-        max-width: 700px;
-    }
-    .shop-block {
-        width: calc(50% - 5px);
-        display: flex;
-        flex-direction: column;
-    }
-    .shop-block:nth-child(n+3){
-        margin-top: 30px;
-    }
-    .shop-block:nth-child(even) {
-        margin-left: 10px;
-    }
-    .post-image {
-        margin-right: 30px;
-    }
-}
-
-@media (min-width: 1201px)  {
-    .popup-container{
-        max-width:388px;
-    }
-
-    .x{
-        right:-360px;
-    }
-
-    .input-popup {
-        max-width: 330px;
-        min-width: 330px;
-    }
-    .head {
-        background-image: url(../images/banner-bg.jpg);
-    }
-    .header-logo-640 {
-        display: none;
-    }
-    .head-title-container {
-        margin:125px auto 0;
-    }
-    .head-title {
-        font-size: 45px;
-        line-height: 1.66;
-    }
-    .main-title {
-        font-size: 20px;
-        line-height: 1.5;
-    }
-    .trend-block{
-        width: 25%;
-    }
-    .trend-block:nth-child(n+2){
-        margin-left: 4px;
-    }
-    .trend-line-link{
-        font-size: 20px;
-        line-height: 1.2;
-    }
-    .post-container {
-        flex-direction: row;
-    }
-    .container{
-        max-width:1170px;
-    }
-    .post-container {
-        width: 778px;
-    }
-    .post-title-link {
-        font-size: 20px;
-        line-height: 1.05;
-    }
-    .post-content-txt{
-        font-size: 15px;
-        line-height: 1.46;
-        margin: 0;
-        padding: 0;
-    }
-    .main {
-        display: flex;
-        flex-direction: row;
-    }
-    .sidebar {
-        max-width: 272px;
-    }
-    .sidebar-title{
-        font-size: 14px;
-        line-height: 2.14;
-    }
-    .menu-burger {
-        display: none;
-    }
-    .menu-container {
-        max-width: 1170px;
-    }
-    .head-title {
-        font-size: 45px;
-        line-height:1.66;
-    }
-    .shop-blocks {
-        max-width: 1170px;
-    }
-    .shop-block:nth-child(n+4){
-        margin-top: 30px;
-    }
-    .post-image {
-        margin-right: 30px;
-    }
-}
-
-@media  only screen and (min-width: 641px) and (max-width:  1200px) and (orientation: landscape){}
-
-
-@media  only screen and (min-width: 641px) and (max-width:  1200px) and (orientation: portrait){
-    .trend-blocks{
-        display:flex;
-        flex-wrap: wrap;
-    }
-    .trend-block{
-        width: calc(50% - 4px);
-        margin-top: 4px;
-    }
-    .trend-block:nth-child(even){
-        margin-left: 4px;
-    }
-}
-
-
-@media only screen and (orientation: landscape) and (max-width: 640px){
-    .trend-blocks{
-        display:flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    .trend-block{
-        width: calc(50% - 2px);
-        margin-top: 4px;
-    }
-    .trend-block:nth-child(even){
-        margin-left: 4px;
-    }
-}
-
-@media only screen and (orientation: portrait) and (max-width: 640px) {
-    .trend-blocks{
-        display:flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .trend-block{
-        width: 100%;
-    }
-    .trend-block:nth-child(n+2){
-        margin-top: 3px;
-    }
-}
 
 body {
     font-family: "Open Sans", Arial,sans-serif;
@@ -389,8 +23,7 @@ body {
     padding: 0;
 }
 
-
-h2 {
+h1, h2, h3,{
     margin: 0;
     padding: 0;
 }
@@ -1163,7 +796,7 @@ margin-top: 20px;
 
 .shop-txt{
     color: black;
-    font-size: 15px;}
+    font-size: 0.75rem;}
 
 .shop-button{
     width: 140px;
@@ -1269,4 +902,382 @@ margin-top: 20px;
     color: #999999;
     margin-top: 74px;
     text-align: center;
+}
+
+@media (max-width: 640px) {
+    .popup-container{
+        max-width:330px;
+    }
+    .x{
+        right:-300px;
+    }
+    .input-popup {
+        max-width: 300px;
+        min-width: 300px;
+    }
+    .head {
+        background-image: url(../images/banner-mobile.jpg);
+    }
+
+    .head-title-container {
+        margin:20px auto 0;
+    }
+    .head-title {
+        font-size: 26px;
+        line-height: 1.38;
+        margin-bottom: 218px;
+    }
+    .header-logo {
+        display: none;
+    }
+    .header-logo-640{
+        max-width: 270px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 180px;
+        display:flex;
+        justify-content: center;
+    }
+
+    .menu-burger {
+        fill: #ffffff;
+    }
+    .menu-list-item {
+        display: none;
+    }
+    .menu-container {
+        max-width: 330px;
+        min-height: 550px;
+    }
+
+    .trend-blocks{
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .trend-block{
+        width: 100%;
+    }
+    .trend-block:nth-child(n+2){
+        margin-top: 3px;
+    }
+
+    .trend-line-link{
+        font-size: 16px;
+        line-height: 1.25;
+    }
+
+    .main {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-title {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+
+    .post-container {
+        max-width: 330px;
+        flex-direction: column;
+        margin: auto;
+    }
+    .post-container:nth-child(n+2) {
+        margin-top: -25px;
+    }
+    .post-tags{
+        padding-top: 14px;
+    }
+    .post-content {
+        border-bottom: 2px solid #eeeeee;
+        flex-grow: 1;
+    }
+    .post-content-txt{
+        font-size: 14px;
+        line-height: 1.42;
+        margin: 0;
+        padding: 0;
+    }
+    .post-title-link {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    .post-content {
+        padding-bottom: 24px;
+    }
+    .sidebar {
+        max-width: 330px;
+        margin: auto;
+    }
+    .sidebar-title{
+        font-size: 16px;
+        line-height: 1.87;
+    }
+    .shop-block:nth-child(n+2){
+        margin-top: 30px;
+    }
+    .shop-blocks {
+        max-width: 330px;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 1200px) {
+    .popup-container{
+        max-width:388px;
+    }
+    .x{
+        right:-360px;
+    }
+    .input-popup {
+        max-width: 330px;
+        min-width: 330px;
+    }
+    .head {
+        background-image: url(../images/banner-bg-tablet.jpg);
+    }
+    .header-logo-640 {
+        display: none;
+    }
+    .menu-list-item {
+        display: none;
+    }
+    .head-title-container {
+        margin:125px auto 0;
+        line-height: 55px;
+    }
+    .head-title {
+        font-size: 40px;
+        line-height: 1.37;
+    }
+    .main-title {
+        font-size: 18px;
+        line-height: 29px;
+    }
+    .trend-blocks{
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .trend-block{
+        width: calc(50% - 2px);
+        margin-top: 4px;
+    }
+    .trend-block:nth-child(even){
+        margin-left: 4px;
+    }
+    .trend-block:nth-child(even){
+        margin-left: 4px;
+    }
+    .trend-line-link{
+        font-size: 17px;
+        line-height: 22px;
+    }
+    .post-container {
+        flex-direction: column;
+    }
+    .container {
+        max-width: 700px;
+    }
+    .post-container {
+        max-width: 380px;
+    }
+    .post-tags{
+        padding-top: 14px;
+    }
+    .post-content {
+        border-bottom: 2px solid #eeeeee;
+    }
+    .post-content-txt{
+        font-size: 15px;
+        line-height: 22px;
+        margin: 0;
+        padding: 0;
+    }
+    .post-container:nth-child(n+2) {
+        margin-top: -25px;
+    }
+    .post-content {
+        padding-bottom: 24px;
+    }
+    .post-title-link {
+        font-size: 17px;
+        line-height: 22px;
+    }
+    .main {
+        display: flex;
+        flex-direction: row;
+    }
+    .sidebar {
+        max-width: 272px;
+        margin-left: 36px;
+    }
+    .sidebar-title{
+        font-size: 18px;
+        line-height: 30px;
+    }
+    .menu-burger {
+        fill: #ffffff;
+    }
+    .menu-container {
+        max-width: 700px;
+    }
+    .head-title {
+        font-size: 40px;
+        line-height: 75px;
+    }
+    .shop-blocks {
+        max-width: 700px;
+    }
+    .shop-block {
+        width: calc(50% - 5px);
+        display: flex;
+        flex-direction: column;
+    }
+    .shop-block:nth-child(n+3){
+        margin-top: 30px;
+    }
+    .shop-block:nth-child(even) {
+        margin-left: 10px;
+    }
+    .post-image {
+        margin-right: 30px;
+    }
+}
+
+@media (min-width: 1201px)  {
+    .popup-container{
+        max-width:388px;
+    }
+
+    .x{
+        right:-360px;
+    }
+
+    .input-popup {
+        max-width: 330px;
+        min-width: 330px;
+    }
+    .head {
+        background-image: url(../images/banner-bg.jpg);
+    }
+    .header-logo-640 {
+        display: none;
+    }
+    .head-title-container {
+        margin:125px auto 0;
+    }
+    .head-title {
+        font-size: 45px;
+        line-height: 1.66;
+    }
+    .main-title {
+        font-size: 20px;
+        line-height: 1.5;
+    }
+    .trend-block{
+        width: 25%;
+    }
+    .trend-block:nth-child(n+2){
+        margin-left: 4px;
+    }
+    .trend-line-link{
+        font-size: 20px;
+        line-height: 1.2;
+    }
+    .post-container {
+        flex-direction: row;
+    }
+    .container{
+        max-width:1170px;
+    }
+    .post-container {
+        width: 778px;
+    }
+    .post-title-link {
+        font-size: 20px;
+        line-height: 1.05;
+    }
+    .post-content-txt{
+        font-size: 15px;
+        line-height: 1.46;
+        margin: 0;
+        padding: 0;
+    }
+    .main {
+        display: flex;
+        flex-direction: row;
+    }
+    .sidebar {
+        max-width: 272px;
+    }
+    .sidebar-title{
+        font-size: 14px;
+        line-height: 2.14;
+    }
+    .menu-burger {
+        display: none;
+    }
+    .menu-container {
+        max-width: 1170px;
+    }
+    .head-title {
+        font-size: 45px;
+        line-height:1.66;
+    }
+    .shop-blocks {
+        max-width: 1170px;
+    }
+    .shop-block:nth-child(n+4){
+        margin-top: 30px;
+    }
+    .post-image {
+        margin-right: 30px;
+    }
+}
+
+@media  only screen and (min-width: 641px) and (max-width:  1200px) and (orientation: portrait){
+    .trend-blocks{
+        display:flex;
+        flex-wrap: wrap;
+    }
+    .trend-block{
+        width: calc(50% - 4px);
+        margin-top: 4px;
+    }
+    .trend-block:nth-child(even){
+        margin-left: 4px;
+    }
+}
+
+
+@media only screen and (orientation: landscape) and (max-width: 640px){
+    .trend-blocks{
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .trend-block{
+        width: calc(50% - 2px);
+        margin-top: 4px;
+    }
+    .trend-block:nth-child(even){
+        margin-left: 4px;
+    }
+}
+
+@media only screen and (orientation: portrait) and (max-width: 640px) {
+    .trend-blocks {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .trend-block {
+        width: 100%;
+    }
+
+    .trend-block:nth-child(n+2) {
+        margin-top: 3px;
+    }
 }
