--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     font-family: "Open Sans", Arial,sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 0.94rem;
     line-height: 1.46;
     margin: 0;
     padding: 0;
@@ -111,7 +111,7 @@ a{
     font-family: "Open Sans", Arial,sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.88rem;
     line-height: 1.46;
 }
 
@@ -162,7 +162,7 @@ a{
     font-family: "Open Sans", Arial,sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.88rem
     line-height: 1.46;
 }
 
@@ -284,7 +284,7 @@ a{
 }
 
 .menu {
-    font-size: 13px;
+    font-size: 0.81rem;
     text-transform: uppercase;
 }
 
@@ -298,7 +298,7 @@ a{
     padding-left: 14px;
     padding-top: 8px;
     padding-bottom: 8px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 700;
     font-style: normal;
 }
@@ -317,7 +317,7 @@ a{
     text-decoration: none;
     text-transform: uppercase;
     color: #ffffff;
-    font-size: 13px;
+    font-size: 0.81rem;
     font-weight: 700;
     font-style: normal;
 }
@@ -406,7 +406,7 @@ a{
     margin-top: 0;
     margin-bottom: 15px;
     color: #b59f5b;
-    font-size: 14px;
+    font-size: 0.88rem;
     text-transform: uppercase;
     font-weight: 700;
     flex-wrap: wrap;
@@ -491,7 +491,7 @@ a{
     padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
     margin-top: 0;
     color: #b59f5b;
-    font-size: 14px;
+    font-size: 0.88rem;
     text-transform: uppercase;
     font-weight: 700;
     flex-wrap: wrap;
@@ -509,7 +509,7 @@ a{
     color: black;
 }
 .post-tagline{
-    font-size: 12px;
+    font-size: 0.75rem;
     margin-top: 25px;
     margin-bottom:50px;
 }
@@ -544,7 +544,7 @@ a{
 .sidebar-title{
     color: #000000;
     line-height: 1.28;
-    font-size: 14px;
+    font-size: 0.88rem;
     text-transform: uppercase;
     text-align: center;
     margin-bottom:30px;
@@ -565,7 +565,7 @@ a{
 .new-post-link {
     color: #000000;
     line-height: 1.28;
-    font-size: 14px;
+    font-size: 0.88rem;
     text-transform: uppercase;
     margin: 0;
     padding: 0;
@@ -611,7 +611,7 @@ a{
     border: 0;
     background: #f4f7f6;
     color: #6f6f6f;
-    font-size: 13px;
+    font-size: 0.81rem;
     box-sizing: border-box;
     padding-left: 20px;
     padding-right: 20px;
@@ -624,7 +624,7 @@ a{
     cursor: pointer;
     font-weight: 700;
     width: 100%;
-    font-size: 14px;
+    font-size: 0.88rem;
     text-transform: uppercase;
     color: #ffffff;
     box-sizing: border-box;
@@ -666,7 +666,7 @@ margin-top: 20px;
 }
 /* --------------------------------------------------------------подписка */
 .flex-container-tag {
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: 2.5;
     text-transform: uppercase;
 }
@@ -708,7 +708,7 @@ margin-top: 20px;
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 14px;
+    font-size: 0.88rem;
     text-transform: capitalize;
     color: black;
     text-decoration: none;
@@ -726,7 +726,7 @@ margin-top: 20px;
 .index {
     vertical-align: super;
     line-height: 1.5;
-    font-size: 12px;
+    font-size: 0.75rem;
     text-transform: uppercase;
     color: #b59f5b;
     margin-left: 5px;
@@ -781,7 +781,7 @@ margin-top: 20px;
     font-weight: 700;
     margin-bottom: 20px;
     position: relative;
-    font-size: 17px;
+    font-size: 1.06rem;
     line-height: 1.29;
 }
 
@@ -790,7 +790,7 @@ margin-top: 20px;
     text-transform: uppercase;
     font-weight: 700;
     position: relative;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 1.2;
 }
 
@@ -816,7 +816,7 @@ margin-top: 20px;
 
 .shop-old-price{
     color: black;
-    font-size: 14px;
+    font-size: 0.88rem;
     line-height: 1.71;
     text-transform: uppercase;
     font-weight: 700;
@@ -898,7 +898,7 @@ margin-top: 20px;
 
 .copyright-link{
     text-decoration: none;
-    font-size: 12px;
+    font-size: 0.75rem;
     color: #999999;
     margin-top: 74px;
     text-align: center;
@@ -923,7 +923,7 @@ margin-top: 20px;
         margin:20px auto 0;
     }
     .head-title {
-        font-size: 26px;
+        font-size: 1.63rem;
         line-height: 1.38;
         margin-bottom: 218px;
     }
@@ -963,7 +963,7 @@ margin-top: 20px;
     }
 
     .trend-line-link{
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 1.25;
     }
 
@@ -973,7 +973,7 @@ margin-top: 20px;
     }
 
     .main-title {
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 1.25;
     }
 
@@ -993,13 +993,13 @@ margin-top: 20px;
         flex-grow: 1;
     }
     .post-content-txt{
-        font-size: 14px;
+        font-size: 0.88rem;
         line-height: 1.42;
         margin: 0;
         padding: 0;
     }
     .post-title-link {
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 1.25;
     }
     .post-content {
@@ -1010,7 +1010,7 @@ margin-top: 20px;
         margin: auto;
     }
     .sidebar-title{
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 1.87;
     }
     .shop-block:nth-child(n+2){
@@ -1046,12 +1046,12 @@ margin-top: 20px;
         line-height: 55px;
     }
     .head-title {
-        font-size: 40px;
+        font-size: 2.5rem;
         line-height: 1.37;
     }
     .main-title {
-        font-size: 18px;
-        line-height: 29px;
+        font-size: 1.13rem;
+        line-height: 1.61;
     }
     .trend-blocks{
         display:flex;
@@ -1069,8 +1069,8 @@ margin-top: 20px;
         margin-left: 4px;
     }
     .trend-line-link{
-        font-size: 17px;
-        line-height: 22px;
+        font-size: 1.06rem;
+        line-height: 1.29;
     }
     .post-container {
         flex-direction: column;
@@ -1088,8 +1088,8 @@ margin-top: 20px;
         border-bottom: 2px solid #eeeeee;
     }
     .post-content-txt{
-        font-size: 15px;
-        line-height: 22px;
+        font-size: 0.94rem;
+        line-height: 1.47;
         margin: 0;
         padding: 0;
     }
@@ -1100,8 +1100,8 @@ margin-top: 20px;
         padding-bottom: 24px;
     }
     .post-title-link {
-        font-size: 17px;
-        line-height: 22px;
+        font-size: 1.06rem;
+        line-height: 1.29;
     }
     .main {
         display: flex;
@@ -1112,8 +1112,8 @@ margin-top: 20px;
         margin-left: 36px;
     }
     .sidebar-title{
-        font-size: 18px;
-        line-height: 30px;
+        font-size: 1.13rem;
+        line-height: 1.67;
     }
     .menu-burger {
         fill: #ffffff;
@@ -1122,8 +1122,8 @@ margin-top: 20px;
         max-width: 700px;
     }
     .head-title {
-        font-size: 40px;
-        line-height: 75px;
+        font-size: 2.5rem;
+        line-height: 1.88;
     }
     .shop-blocks {
         max-width: 700px;
@@ -1167,7 +1167,7 @@ margin-top: 20px;
         margin:125px auto 0;
     }
     .head-title {
-        font-size: 45px;
+        font-size: 2.81rem;
         line-height: 1.66;
     }
     .main-title {
@@ -1181,7 +1181,7 @@ margin-top: 20px;
         margin-left: 4px;
     }
     .trend-line-link{
-        font-size: 20px;
+        font-size: 1.25rem;
         line-height: 1.2;
     }
     .post-container {
@@ -1194,11 +1194,11 @@ margin-top: 20px;
         width: 778px;
     }
     .post-title-link {
-        font-size: 20px;
+        font-size: 1.25rem;
         line-height: 1.05;
     }
     .post-content-txt{
-        font-size: 15px;
+        font-size: 0.94rem;
         line-height: 1.46;
         margin: 0;
         padding: 0;
@@ -1211,7 +1211,7 @@ margin-top: 20px;
         max-width: 272px;
     }
     .sidebar-title{
-        font-size: 14px;
+        font-size: 0.88;
         line-height: 2.14;
     }
     .menu-burger {
@@ -1221,7 +1221,7 @@ margin-top: 20px;
         max-width: 1170px;
     }
     .head-title {
-        font-size: 45px;
+        font-size: 2.81rem;
         line-height:1.66;
     }
     .shop-blocks {
@@ -1261,6 +1261,7 @@ margin-top: 20px;
         width: calc(50% - 2px);
         margin-top: 4px;
     }
+
     .trend-block:nth-child(even){
         margin-left: 4px;
     }
