--- a/css/style.css
+++ b/css/style.css
@@ -23,20 +23,7 @@ body {
     padding: 0;
 }
 
-h1, h2, h3{
-    margin: 0;
-    padding: 0;
-}
-
-p{
-    margin: 0;
-    padding: 0;
-}
-h3{
-    padding: 0;
-    margin: 0;
-}
-a{
+h3 {
     padding: 0;
     margin: 0;
 }
@@ -210,7 +197,7 @@ a{
     color: inherit;
 }
 
-.menu-container{
+.container{
     padding:0 15px;
     margin:0 auto;
     position:relative;
@@ -318,7 +305,7 @@ a{
     text-transform: uppercase;
     color: #ffffff;
     font-size: 0.81rem;
-    font-weight: 700;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -548,6 +535,8 @@ a{
     text-transform: uppercase;
     text-align: center;
     margin-bottom:30px;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .sidebar-title::after, .teg-title::after{
@@ -556,6 +545,7 @@ a{
     height: 3px;
     width: 66px;
     margin-top: 14px;
+    margin-bottom: 14px;
     display: block;
     margin-right: auto;
     margin-left: auto;
@@ -699,6 +689,8 @@ margin-top: 20px;
 .topic-list{
     padding: 0;
     list-style: none;
+    margin-block-end:0;
+    margin-block-start: 0;
 }
 
 
@@ -945,7 +937,7 @@ margin-top: 20px;
     .menu-list-item {
         display: none;
     }
-    .menu-container {
+    .container {
         max-width: 330px;
         min-height: 550px;
     }
@@ -1118,7 +1110,7 @@ margin-top: 20px;
     .menu-burger {
         fill: #ffffff;
     }
-    .menu-container {
+    .container {
         max-width: 700px;
     }
     .head-title {
@@ -1217,7 +1209,7 @@ margin-top: 20px;
     .menu-burger {
         display: none;
     }
-    .menu-container {
+    .container {
         max-width: 1170px;
     }
     .head-title {
