--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,10 @@ h3 {
 
 /* --------------------------popup start */
 
-.hidden{
+
+/*.hidden{
     display: none;
-}
+}*/
 
 
 .popup-bottom-close{
@@ -66,9 +67,11 @@ h3 {
     width: 100%;
     height: 100%;
     content: "";
-    background-color: #010000;
-    opacity: 0.5;
+    background-color: rgba(0,0,0,.5);
+
 }
+
+
 .popup-container{
     background: #ffffff;
     z-index: 800;
@@ -123,6 +126,7 @@ h3 {
 .popup-txt{
     margin-bottom: 12px;
 }
+
 
 .popup-select-interview-1 {
     list-style: none;
