--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,9 @@ h3 {
 
 /* --------------------------popup start */
 
-
-/*.hidden{
+.hidden{
     display: none;
-}*/
+}
 
 
 .popup-bottom-close{
