--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ h3 {
 
 /* --------------------------popup start */
 
+
 .hidden{
     display: none;
 }
@@ -63,13 +64,19 @@ h3 {
     right: 0;
     bottom: 0;
     z-index: 999;
-    width: 100%;
-    height: 100%;
-    content: "";
-    background-color: rgba(0,0,0,.5);
 
 }
-
+.popup:before {
+    content: '';
+    background: #000000;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    z-index: 300;
+}
 
 .popup-container{
     background: #ffffff;
